--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {}
+/* @layer base {} */
+html,
+body {
+  /* 增加锚点跳转过度效果 */
+  scroll-behavior: smooth;
+}
 
 * {
   box-sizing: border-box;
@@ -53,25 +58,63 @@
   }
 }
 
-/* .codeBlock:active::after {
-  content: '复制成功！';
-  position: absolute;
-  top: 50%;
-  right: 50%;
-  background: #9CA3AF;
-  color: white;
-  padding: 0.25rem 0.5rem;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  border-radius: 0.375rem;
-  cursor: pointer;
-} */
+html.dark {
+  --c-bg: #050505;
+  --c-scrollbar: #111;
+  --c-scrollbar-hover: #222;
+}
 
-/* @keyframes tipSuccess {
-  from{
-    opacity: 1;
-  }
-  from{
+.showDiv1 {
+  animation: showDivAni 0.3s 1;
+}
+
+.showDiv2 {
+  animation: showDivAni 0.7s 1;
+}
+
+.showDiv3 {
+  animation: showDivAni 1s 1;
+}
+
+.showDiv4 {
+  animation: showDivAni 2s 1;
+}
+
+@keyframes showDivAni {
+  0% {
     opacity: 0;
   }
-} */
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+
+}
+
+.box-shadow {
+  box-shadow: 0 3px 8px 6px rgb(7 17 27 / 6%);
+}
+
+::-webkit-scrollbar {
+  /*滚动条整体样式*/
+  width: 10px;
+  /*高宽分别对应横竖滚动条的尺寸*/
+  height: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+  /*滚动条里面小方块*/
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px rgba(97, 184, 179, 0.1);
+  background: #afb7b7;
+}
+
+::-webkit-scrollbar-track {
+  /*滚动条里面轨道*/
+  box-shadow: inset 0 0 5px rgba(87, 175, 187, 0.1);
+  background: #ededed;
+}
