--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -24,12 +24,16 @@
   /* Use Roman numerals for sub-sub-ordered lists. (Like Github.) */
 }
 
+.markdown font {
+  display: block;
+}
+
 .markdown img {
   max-width: 100%;
 }
 
 .markdown a {
-  color: blue;
+  color: #3b82f6;
   text-decoration: underline;
 }
 
@@ -64,6 +68,7 @@
   border: 1px solid #CCC;
   padding: 0.5em 0.7em;
   display: block !important;
+  background-color: #f5f2f0;
   /* added to counteract the Yahoo-specific `code` rule; without this, code blocks in Blogger are broken */
 }
 
@@ -179,6 +184,30 @@
   padding: 0;
   font-weight: bold;
   color: #009688;
+}
+
+.markdown h1 a,
+.markdown h2 a,
+.markdown h3 a,
+.markdown h4 a {
+  cursor: pointer;
+  color: #009688;
+  text-decoration: none;
+}
+
+.markdown h1 a:hover,
+.markdown h2 a:hover,
+.markdown h3 a:hover,
+.markdown h4 a:hover {
+  color: #3b82f6;
+}
+
+.markdown h1 a:hover::after,
+.markdown h2 a:hover::after,
+.markdown h3 a:hover::after,
+.markdown h4 a:hover::after {
+  content: ' #';
+  color: #3b82f6;
 }
 
 .markdown h1 {
