--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -39,7 +39,7 @@
     padding: 0 0.3em;
     white-space: pre-wrap;
     border: 1px solid #EAEAEA;
-    background-color: #F8F8F8;
+    background-color: #def5df;
     border-radius: 3px;
     display: inline;
     /* added to fix Yahoo block display of inline code */
